--- a/i18n/locales/en-US/translations.json
+++ b/i18n/locales/en-US/translations.json
@@ -16,13 +16,18 @@
   "common.go_home": "Go to home screen",
   "common.no_users_found": "No users found",
   "common.cancel": "Cancel",
+  "common.modified": "modified",
   "common.role_assignment": "Role Assignment",
   "common.txn": "TXN",
   "common.featured": "Featured",
   "common.edit": "Edit",
   "common.delete": "Delete",
   "common.save": "Save",
+  "common.update": "Update",
+  "common.add": "Add",
+  "common.saving": "Saving...",
   "common.retry": "Retry",
+  "common.reset": "Reset",
   "common.featured_products": "Featured Products",
   "common.description": "Description",
   "common.product_title": "Product Title",
@@ -33,9 +38,10 @@
   "headers.all_users": "All Users",
   "headers.filter_by_role": "Filter by Role",
   "headers.rearrange_users": "Rearrange Users",
-  "headers.save": "Save",
-  "headers.cancel": "Cancel",
-  "headers.reset": "Reset",
+  "headers.rate_chart_manager": "Rate Chart Manager",
+  "headers.showing_all_users": "Showing all users",
+  "headers.filter_by": "Filtered by",
+  "headers.welcome_milk_dashboard": "Welcome to your milk dashboard",
 
   "auth.login": "Login",
   "auth.logout": "Logout",
@@ -89,7 +95,7 @@
   "rate.fat_and_snf_rate_chart": "Fat and SNF Rate Chart",
 
   "payments.ok": "OK",
-  "payments.loading_payments": "Loading transactions...",
+  "payments.loading_payments": "Loading transactions",
   "payments.no_transactions_found": "No transactions found",
   "payments.total_money_earned": "Total Money Earned",
   "payments.transaction_history": "Transaction History",
@@ -135,6 +141,12 @@
   "entry.milk_rate": "Milk Rate",
   "entry.morning_milk_quality": "Morning Milk Quality",
   "entry.evening_milk_quality": "Evening Milk Quality",
+  "entry.select_farmer": "Select Farmer",
+  "entry.select_buyer": "Select Buyer",
+  "entry.collection": "Collection",
+  "entry.sale": "Sale",
+  "entry.farmer": "Farmer",
+  "entry.buyer": "Buyer",
 
   "users.create_new_user": "Create New User",
   "users.full_name": "Full Name",
@@ -148,7 +160,6 @@
   "users.member_since": "Member Since",
   "users.dairy_name": "Dairy Name",
   "users.save_changes": "Save Changes",
-  "users.cancel": "Cancel",
   "users.edit_profile": "Edit Profile",
 
   "settings.preferences": "Preferences",
@@ -157,7 +168,7 @@
   "settings.delete_account": "Delete Account",
   "settings.about": "About",
   "settings.version": "Version",
-  "settings.built_by": "Built by TrueLoop Solutions",
+  "settings.built_by": "Built by Subham.",
 
   "pdf.comprehensive_report": "Comprehensive Milk Collection Report",
   "pdf.total_entries": "Total Entries",
@@ -184,7 +195,13 @@
   "validation.mobile_indian": "Please enter a valid Indian mobile number",
   "validation.mobile_range": "Mobile number must start with 6, 7, 8, or 9",
   "validation.name": "Name should contain only letters and spaces",
+  "validation.amount": "Please enter a valid amount",
+  "validation.role": "Please Choose role",
+  "validation.user": "Please Choose User",
+  "validation.date": "Please Choose Date",
 
   "err.create_account": "Failed to create account",
-  "err.login_fail": "Failed to login"
+  "err.login_fail": "Failed to login",
+
+  "admin.role_assignment": "Role Assignment"
 }
