multilanguage added completely

--- a/i18n/locales/bh-IN/translations.json
+++ b/i18n/locales/bh-IN/translations.json
@@ -1,177 +1,206 @@
 {
-  "common.welcome": "स्वागत बा",
-  "common.login": "लॉगिन करीं",
-  "common.logout": "लॉगआउट करीं",
-  "common.sign_up": "साइन अप करीं",
-  "common.sign_in": "साइन इन करीं",
-  "common.sign_out": "साइन आउट करीं",
+  "common.welcome": "आपके स्वागत बा",
   "common.mobile_number": "मोबाइल नंबर",
   "common.password": "पासवर्ड",
   "common.full_name": "पूरा नाम",
   "common.view_all": "सभ देखीं",
-  "common.no_data_found": "कवनो डेटा ना मिलल",
-  "common.amount": "रकम",
+  "common.no_results_found": "कोई परिणाम नाहीं मिलल",
+  "common.amount": "राशि",
   "common.paid": "भुगतान भइल",
-  "common.received": "मिलल बा",
+  "common.received": "प्राप्त भइल",
   "common.menu": "मेनू",
-  "common.settings": "सेटिंग",
-  "common.app_version": "ऐप वर्ज़न",
+  "common.settings": "सेटिंग्स",
+  "common.app_version": "एप के वर्जन",
   "common.profile": "प्रोफाइल",
-  "common.screen_not_exist": "ई स्क्रीन मौजूद नइखे।",
+  "common.screen_not_exist": "स्क्रीन नइखे मिलत।",
   "common.go_home": "होम स्क्रीन पर जाईं",
   "common.cancel": "रद्द करीं",
-  "common.save": "सेव करीं",
+  "common.modified": "बदलल गइल",
+  "common.role_assignment": "भूमिका बाँटब",
+  "common.transaction": "लेन-देन",
+  "common.featured_products": "खास उत्पाद",
   "common.edit": "संपादन करीं",
-  "common.delete": "हटाईं",
+  "common.delete": "हटा दीं",
+  "common.save": "सेव करीं",
+  "common.save_changes": "परिवर्तन सेव करीं",
+  "common.update": "अपडेट करीं",
+  "common.add": "जोड़ीं",
+  "common.saving": "सेव हो रहल बा…",
   "common.retry": "फिर से कोशिश करीं",
-  "common.role_assignment": "भूमिका दीं",
-  "common.txn": "लेनदेन",
-  "common.featured": "खास",
-  "common.featured_products": "खास प्रोडक्ट",
-  "common.description": "विवरण",
-  "common.product_title": "प्रोडक्ट के नाम",
-  "common.tap_to_select_product_image": "प्रोडक्ट के फोटो चुनले खातिर टैप करीं",
-  "common.coming_soon": "जल्दी आवे वाला बा",
-  "common.great_things_coming": "कुछ बढ़िया चीज जल्दी आवे वाली बा!",
-  "common.ok": "ठीक बा",
   "common.reset": "रीसेट करीं",
-  "common.select_date": "तारीख चुनीं",
+  "common.description": "विवरण",
+  "common.product_title": "उत्पाद के नाम",
+  "common.tap_to_select_product_image": "उत्पाद के फोटो चुनें खातिर टैप करीं",
+  "common.coming_soon": "जल्दी आ रहल बा",
+  "common.great_things_coming": "शानदार चीज़ें जल्दी आ रहल बाड़ी स!",
+  "common.search": "खोजीं",
+  "common.submit": "सब्मिट करीं",
+  "common.loading": "लोड हो रहल बा…",
+  "common.error": "कुछ गलती भइल",
+  "common.success": "सफल भइल",
+  "common.select_date": "तारीख चुनल जाव",
 
-  "headers.all_users": "सभे यूज़र",
-  "headers.filter_by_role": "भूमिका से फिल्टर करीं",
-  "headers.rearrange_users": "यूज़र के दोबारा क्रम में लगाईं",
+  "headers.all_users": "सभ उपयोगकर्ता",
+  "headers.filter_by_role": "भूमिका से फ़िल्टर करीं",
+  "headers.rearrange_users": "उपयोगकर्तन के पुन: व्यवस्था करीं",
+  "headers.rate_chart_manager": "रेट चार्ट मैनेजर",
+  "headers.showing_all_users": "सभ उपयोगकर्ता देखावल जा रहल बा",
+  "headers.filter_by": "के द्वारा फ़िल्टर",
+  "headers.welcome_milk_dashboard": "अपने दूध डैशबोर्ड में स्वागत बा",
 
-  "auth.login_account": "आपना अकाउंट में लॉगिन करीं",
-  "auth.login_sita_dairy": "सीता डेयरी में लॉगिन करीं",
-  "auth.sita_dairy": "सीता डेयरी",
-  "auth.management_system": "मैनेजमेंट सिस्टम",
-  "auth.sita_dairy_management_system": "सीता डेयरी मैनेजमेंट सिस्टम",
-  "auth.create_new_account": "नया अकाउंट बनाई",
-  "auth.create_account": "अकाउंट बनाई",
-  "auth.already_have_account": "पहिले से अकाउंट बा?",
-  "auth.join_our_dairy_community": "हमर डेयरी परिवार से जुड़ जाईं",
+  "auth.login": "लॉग इन",
+  "auth.logout": "लॉग आउट",
+  "auth.sign_up": "साइन अप करीं",
+  "auth.sign_in": "साइन इन करीं",
+  "auth.sign_out": "साइन आउट करीं",
+  "auth.login_account": "खाते में लॉग इन करीं",
+  "auth.login_sita_dairy": "सिता डेयरी में लॉग इन करीं",
+  "auth.sita_dairy": "सिता डेयरी",
+  "auth.management_system": "प्रबंधन प्रणाली",
+  "auth.sita_dairy_management_system": "सिता डेयरी प्रबंधन प्रणाली",
+  "auth.create_account": "खाता बनाईं",
+  "auth.already_have_account": "पहिले से खाता बा?",
+  "auth.join_our_dairy_community": "हमार डेयरी समुदाय से जुड़ीं",
+  "auth.join_sita_dairy": "सिता डेयरी में शामिल होखीं",
 
   "dashboard.admin_dashboard": "एडमिन डैशबोर्ड",
-  "dashboard.total_users": "कुल यूज़र",
-  "dashboard.quick_actions": "फटाफट काम",
-  "dashboard.all_users": "सभे यूज़र",
-  "dashboard.milk_entry": "दूध एंट्री",
-  "dashboard.payments": "पेमेंट",
-  "dashboard.reports": "रिपोर्ट",
-  "dashboard.recent_entries": "हाल के एंट्री",
-  "dashboard.admin_dashboard_tagine": "आपन डेयरी के काम संभालीं",
-  "dashboard.today_collection": "आज के कलेक्शन",
-  "dashboard.monthly_collection": "महिना के कलेक्शन",
+  "dashboard.total_users": "कुल उपयोगकर्ता",
+  "dashboard.today_collection": "आज के संग्रह",
+  "dashboard.monthly_collection": "मासिक संग्रह",
+  "dashboard.quick_actions": "त्वरित क्रियाएं",
+  "dashboard.all_users": "सभ उपयोगकर्ता",
+  "dashboard.milk_entry": "दूध प्रविष्टि",
+  "dashboard.reports": "रिपोर्ट्स",
+  "dashboard.recent_entries": "हाल के प्रविष्टियाँ",
+  "dashboard.admin_dashboard_tagline": "अपने डेयरी ऑपरेशन के प्रबंधन करीं",
 
   "navigation.dashboard": "डैशबोर्ड",
-  "navigation.payments": "पेमेंट",
-  "navigation.milk_entry": "दूध एंट्री",
+  "navigation.payments": "भुगतान",
+  "navigation.milk_entry": "दूध प्रविष्टि",
   "navigation.rate_chart": "रेट चार्ट",
-  "navigation.all_records": "सभे रिकॉर्ड",
-  "navigation.users": "यूज़र",
-  "navigation.rearrange_users": "यूज़र के क्रम बदलीं",
-  "navigation.products": "प्रोडक्ट",
+  "navigation.milk_rate": "दूध दर",
+  "navigation.all_records": "सभ रिकॉर्ड",
+  "navigation.milk_records": "दूध रिकॉर्ड",
+  "navigation.users": "उपयोगकर्ता",
+  "navigation.rearrange_users": "उपयोगकर्तन के पुन: व्यवस्था करीं",
+  "navigation.products": "उत्पाद",
   "navigation.profile": "प्रोफाइल",
-  "navigation.settings": "सेटिंग",
-  "navigation.milk_subscription": "दूध सब्सक्रिप्शन",
+  "navigation.settings": "सेटिंग्स",
+  "navigation.milk_subscription": "दूध सदस्यता",
 
-  "products.buy_on_whatsapp": "व्हाट्सऐप पर खरीदीं",
-  "products.no_products_found": "कवनो प्रोडक्ट ना मिलल",
-  "products.loading_products": "प्रोडक्ट लोड हो रहल बा...",
+  "products.buy_on_whatsapp": "व्हाट्सएप पर खरीदीं",
+  "products.no_products_found": "कोई उत्पाद नइखे मिलल",
+  "products.loading_products": "उत्पाद लोड हो रहल बाड़न…",
+  "products.product_management": "उत्पाद प्रबंधन",
 
-  "rate.processing": "प्रोसेस हो रहल बा...",
-  "rate.row": "पंक्ति",
-  "rate.column": "स्तंभ",
+  "rate.processing": "प्रोसेस हो रहल बा…",
+  "rate.row": "पांक्ति",
+  "rate.column": "कॉलम",
   "rate.excel": "एक्सेल",
-  "rate.fat_and_snf_rate_chart": "फैट आ SNF रेट चार्ट",
+  "rate.fat_and_snf_rate_chart": "फैट आ एसएनएफ दर चार्ट",
 
-  "payments.loading_payments": "लेनदेन लोड हो रहल बा...",
-  "payments.no_transactions_found": "कवनो लेनदेन ना मिलल",
-  "payments.total_money_earned": "कुल कमाई",
-  "payments.transaction_history": "लेनदेन इतिहास",
-  "payments.select_payment_for": "किसके खातिर पेमेंट चुनीं",
-  "payments.select_user": "यूज़र चुनीं",
-  "payments.enter_amount": "रकम डालीं",
-  "payments.wallet_points": "वॉलेट पॉइंट",
-  "payments.coupons_used": "इस्तेमाल कइल कूपन",
-  "payments.points_withdrawn": "निकाले गइल पॉइंट",
+  "payments.ok": "ठीक बा",
+  "payments.loading_transactions": "लेन-देन लोड हो रहल बा…",
+  "payments.no_transactions_found": "कोई लेन-देन नइखे मिलल",
+  "payments.total_money_earned": "कुल कमाई के राशि",
+  "payments.transaction_history": "लेन-देन इतिहास",
+  "payments.select_payment_for": "भुगतान खातिर चुनीं",
+  "payments.select_user": "उपयोगकर्ता चुनीं",
+  "payments.enter_amount": "राशि दर्ज करीं",
+  "payments.wallet_points": "वॉलेट पॉइंट्स",
+  "payments.coupons_used": "कूपन इस्तेमाल भइल",
+  "payments.points_withdrawn": "पॉइंट्स निकाले गइल",
+  "payments.today_collection": "आज के संग्रह",
   "payments.today_earnings": "आज के कमाई",
-  "payments.monthly_earnings": "महिना के कमाई",
+  "payments.monthly_collection": "मासिक संग्रह",
+  "payments.monthly_earnings": "मासिक कमाई",
 
   "entry.weight": "वजन",
-  "entry.fat": "फैट",
+  "entry.fat": "वसा",
   "entry.snf": "एसएनएफ",
-  "entry.entries": "एंट्री",
-  "entry.apply_filters": "फिल्टर लगाईं",
-  "entry.select_date_range": "तारीख के रेंज चुनीं",
-  "entry.start_date": "सुरुआत तारीख",
-  "entry.end_date": "अंत तारीख",
+  "entry.entries": "प्रविष्टियाँ",
+  "entry.apply_filters": "फ़िल्टर लागू करीं",
+  "entry.start_date": "शुरू के तारीख",
+  "entry.end_date": "खातमे तारीख",
   "entry.clear": "साफ करीं",
   "entry.done": "हो गइल",
-  "entry.select_shift": "शिफ्ट चुनीं",
-  "entry.morning": "भोर",
-  "entry.evening": "सांझ",
-  "entry.both": "दोनो",
-  "entry.milk_quality_metrics": "दूध के क्वालिटी माप",
-  "entry.no_recent_collections": "हाल के कलेक्शन नइखे मिलल",
-  "entry.no_entries_yet": "अभी तक कवनो एंट्री नइखे",
-  "entry.todays": "आज के",
-  "entry.add_your_first": "अपना पहली एंट्री जोड़ीं",
-  "entry.options": "एंट्री विकल्प",
-  "entry.edit_entry": "एंट्री बदलीं",
-  "entry.delete_entry": "एंट्री हटाईं",
-  "entry.editing": "संपादन चल रहल बा",
+  "entry.select_shift": "शिफ्ट चुनल जाव",
+  "entry.morning": "सुबह",
+  "entry.evening": "शाम",
+  "entry.both": "दूनों",
+  "entry.milk_quality_metrics": "दूध गुणवत्ता मेट्रिक्स",
+  "entry.no_recent_collections": "हाल के कोई संग्रह नइखे मिलल",
+  "entry.no_entries_yet": "अभी तक कोई प्रविष्टि नइखे",
+  "entry.add_your_first": "अपना पहला जोड़ीं",
+  "entry.options": "विकल्प",
+  "entry.edit_entry": "प्रविष्टि संपादित करीं",
+  "entry.delete_entry": "प्रविष्टि हटाईं",
+  "entry.editing": "संपादन हो रहल बा",
   "entry.total": "कुल",
-  "entry.milk_rate": "दूध के रेट",
-  "entry.morning_milk_quality": "भोर के दूध क्वालिटी",
-  "entry.evening_milk_quality": "सांझ के दूध क्वालिटी",
+  "entry.milk_rate": "दूध दर",
+  "entry.morning_milk_quality": "सुबह के दूध के गुणवत्ता",
+  "entry.evening_milk_quality": "शाम के दूध के गुणवत्ता",
+  "entry.select_farmer": "किसान चुनीं",
+  "entry.select_buyer": "खरीदार चुनीं",
+  "entry.collection": "संग्रह",
+  "entry.sale": "बिक्री",
+  "entry.farmer": "किसान",
+  "entry.buyer": "खरीदार",
+  "entry.milk_buy": "दूध खरीद",
+  "entry.milk_sale": "दूध बिक्री",
 
-  "users.create_new_user": "नया यूज़र बनाई",
-  "users.select_role": "भूमिका चुनीं",
-  "users.user_id": "यूज़र आईडी",
-  "users.verified": "वेरिफाइड",
-  "users.personal_info": "निजी जानकारी",
-  "users.non_editable": "बदलल ना जा सकेला",
-  "users.father_name": "बाप के नाम",
+  "users.create_new_user": "नया उपयोगकर्ता बनाईं",
+  "users.select_role": "भूमिका चुनल जाव",
+  "users.user_id": "उपयोगकर्ता आईडी",
+  "users.verified": "सत्यापित",
+  "users.personal_info": "व्यक्तिगत जानकारी",
+  "users.non_editable": "संपादित नहीं हो सकेला",
+  "users.father_name": "पिता के नाम",
   "users.address": "पता",
-  "users.member_since": "मेंबर कबसे बा",
+  "users.member_since": "सदस्यता से",
   "users.dairy_name": "डेयरी के नाम",
-  "users.save_changes": "बदलाव सेव करीं",
-  "users.edit_profile": "प्रोफाइल बदलीं",
+  "users.edit_profile": "प्रोफाइल संपादित करीं",
 
-  "settings.preferences": "पसंद",
-  "settings.account": "अकाउंट",
-  "settings.delete_account": "अकाउंट हटाईं",
-  "settings.about": "जानकारी",
-  "settings.version": "वर्ज़न",
-  "settings.built_by": "TrueLoop Solutions से बनावल गइल",
+  "settings.preferences": "प्राथमिकताएँ",
+  "settings.account": "खाता",
+  "settings.delete_account": "खाता हटाईं",
+  "settings.about": "हमार बारे में",
+  "settings.version": "संस्करण",
+  "settings.built_by": "बनावल गइल: शुभम।",
+  "settings.manage_your_preferences": "अपना प्राथमिकताएँ सम्हालीं",
 
-  "pdf.comprehensive_report": "पूरा दूध कलेक्शन रिपोर्ट",
-  "pdf.total_entries": "कुल एंट्री",
-  "pdf.date_range": "तारीख के रेंज",
+  "pdf.comprehensive_report": "विस्तृत दूध संग्रह रिपोर्ट",
+  "pdf.total_entries": "कुल प्रविष्टियाँ",
+  "pdf.date_range": "तारीख के सीमा",
   "pdf.report_type": "रिपोर्ट के प्रकार",
-  "pdf.detailed": "विस्तार से",
-  "pdf.sno": "क्रम संख्या",
+  "pdf.detailed": "विस्तृत",
+  "pdf.sno": "क्र. सं.",
   "pdf.date": "तारीख",
   "pdf.shift": "शिफ्ट",
-  "pdf.weight": "वजन (लीटर)",
-  "pdf.fat": "फैट (%)",
+  "pdf.weight": "वजन (ली.)",
+  "pdf.fat": "वसा (%)",
   "pdf.snf": "एसएनएफ (%)",
-  "pdf.rate": "रेट (₹/ली)",
-  "pdf.amount": "रकम (₹)",
-  "pdf.total_amount": "कुल रकम (₹)",
+  "pdf.rate": "दर (₹/ली.)",
+  "pdf.amount": "राशि (₹)",
+  "pdf.total_amount": "कुल राशि (₹)",
   "pdf.summary": "सारांश",
-  "pdf.total_weight": "कुल वजन (लीटर)",
-  "pdf.total_avg_rate": "औसत रेट (₹/ली)",
-  "pdf.computer_generated": "ई रिपोर्ट कंप्यूटर से बनल बा, हस्ताक्षर के ज़रूरत नइखे।",
-  "pdf.report_generated_on": "ई रिपोर्ट सीता डेयरी मैनेजमेंट सिस्टम से बनावल गइल बा",
+  "pdf.total_weight": "कुल वजन (ली.)",
+  "pdf.total_avg_rate": "कुल औसत दर (₹/ली.)",
+  "pdf.computer_generated": "ई एक कंप्यूटर जनित रिपोर्ट बा आ हस्ताक्षर के जरूरत नइखे।",
+  "pdf.report_generated_on": "रिपोर्ट Sita Dairy प्रबंधन प्रणाली से तैयार भइल बा",
 
-  "validation.all_fields_required": "कृपया सभे जगह भर दीं",
-  "validation.mobile": "कृपया सही 10 अंका के मोबाइल नंबर डालीं",
-  "validation.mobile_indian": "कृपया सही भारतीय मोबाइल नंबर डालीं",
-  "validation.mobile_range": "मोबाइल नंबर 6, 7, 8 या 9 से शुरू होखे के चाहीं",
-  "validation.name": "नाम में खाली अक्षर आ स्पेस होखे के चाहीं",
+  "validation.all_fields_required": "कृपया सभ फील्ड भरल जाव।",
+  "validation.mobile": "कृपया 10-अंकीय मान्य फोन नंबर दर्ज करीं।",
+  "validation.mobile_indian": "कृपया एक मान्य भारतीय मोबाइल नंबर दर्ज करीं।",
+  "validation.mobile_range": "मोबाइल नंबर 6,7,8 या 9 से शुरू होखे के चाहीं।",
+  "validation.name": "नाम में खाली अक्षर आ स्पेस होखे के चाहीं।",
+  "validation.amount": "कृपया एक मान्य राशि दर्ज करीं।",
+  "validation.role": "कृपया एक भूमिका चुनल जाव।",
+  "validation.user": "कृपया एक उपयोगकर्ता चुनल जाव।",
+  "validation.date": "कृपया एक तारीख चुनल जाव।",
 
-  "err.create_account": "खाता बनावे में दिक्कत भइल",
-  "err.login_fail": "लॉगिन करे में दिक्कत भइल"
+  "err.create_account": "खाता ना बन सकल। कृपया फेर से प्रयास करीं।",
+  "err.login_fail": "लॉग इन असफल भइल।",
+
+  "admin.role_assignment": "भूमिका बाँटब"
 }
