--- a/i18n/locales/en-US/translations.json
+++ b/i18n/locales/en-US/translations.json
@@ -4,7 +4,7 @@
   "common.password": "Password",
   "common.full_name": "Full Name",
   "common.view_all": "View All",
-  "common.no_payments_found": "No payments found",
+  "common.no_results_found": "No results found",
   "common.amount": "Amount",
   "common.paid": "Paid",
   "common.received": "Received",
@@ -12,28 +12,33 @@
   "common.settings": "Settings",
   "common.app_version": "App Version",
   "common.profile": "Profile",
-  "common.screen_not_exist": "This screen does not exist.",
-  "common.go_home": "Go to home screen",
-  "common.no_users_found": "No users found",
+  "common.screen_not_exist": "Screen not found.",
+  "common.go_home": "Go to Home Screen",
   "common.cancel": "Cancel",
-  "common.modified": "modified",
+  "common.modified": "Modified",
   "common.role_assignment": "Role Assignment",
-  "common.txn": "TXN",
-  "common.featured": "Featured",
+  "common.transaction": "Transaction",
+  "common.featured_products": "Featured Products",
   "common.edit": "Edit",
   "common.delete": "Delete",
   "common.save": "Save",
+  "common.save_changes": "Save Changes",
   "common.update": "Update",
   "common.add": "Add",
   "common.saving": "Saving...",
   "common.retry": "Retry",
   "common.reset": "Reset",
-  "common.featured_products": "Featured Products",
   "common.description": "Description",
   "common.product_title": "Product Title",
   "common.tap_to_select_product_image": "Tap to select product image",
   "common.coming_soon": "Coming Soon",
   "common.great_things_coming": "Great things are coming soon!",
+  "common.search": "Search",
+  "common.submit": "Submit",
+  "common.loading": "Loading...",
+  "common.error": "Something went wrong",
+  "common.success": "Success",
+  "common.select_date": "Select Date",
 
   "headers.all_users": "All Users",
   "headers.filter_by_role": "Filter by Role",
@@ -53,7 +58,6 @@
   "auth.sita_dairy": "Sita Dairy",
   "auth.management_system": "Management System",
   "auth.sita_dairy_management_system": "Sita Dairy Management System",
-  "auth.create_new_account": "Create New Account",
   "auth.create_account": "Create Account",
   "auth.already_have_account": "Already have an account?",
   "auth.join_our_dairy_community": "Join our dairy community",
@@ -68,7 +72,7 @@
   "dashboard.milk_entry": "Milk Entry",
   "dashboard.reports": "Reports",
   "dashboard.recent_entries": "Recent Entries",
-  "dashboard.admin_dashboard_tagine": "Manage your dairy operations",
+  "dashboard.admin_dashboard_tagline": "Manage your dairy operations",
 
   "navigation.dashboard": "Dashboard",
   "navigation.payments": "Payments",
@@ -86,7 +90,8 @@
 
   "products.buy_on_whatsapp": "Buy on WhatsApp",
   "products.no_products_found": "No products found",
-  "products.loading_products": "Loading Products...",
+  "products.loading_products": "Loading products...",
+  "products.product_management": "Product Management",
 
   "rate.processing": "Processing...",
   "rate.row": "Row",
@@ -95,14 +100,13 @@
   "rate.fat_and_snf_rate_chart": "Fat and SNF Rate Chart",
 
   "payments.ok": "OK",
-  "payments.loading_payments": "Loading transactions",
+  "payments.loading_transactions": "Loading transactions...",
   "payments.no_transactions_found": "No transactions found",
   "payments.total_money_earned": "Total Money Earned",
   "payments.transaction_history": "Transaction History",
   "payments.select_payment_for": "Select payment for",
   "payments.select_user": "Select User",
   "payments.enter_amount": "Enter Amount",
-  "payments.select_date": "Select Date",
   "payments.wallet_points": "Wallet Points",
   "payments.coupons_used": "Coupons Used",
   "payments.points_withdrawn": "Points Withdrawn",
@@ -115,11 +119,7 @@
   "entry.fat": "Fat",
   "entry.snf": "SNF",
   "entry.entries": "Entries",
-  "entry.amount": "Amount",
-  "entry.reset": "Reset",
   "entry.apply_filters": "Apply Filters",
-  "entry.select_date": "Select Date",
-  "entry.select_date_range": "Select Date Range",
   "entry.start_date": "Start Date",
   "entry.end_date": "End Date",
   "entry.clear": "Clear",
@@ -131,7 +131,6 @@
   "entry.milk_quality_metrics": "Milk Quality Metrics",
   "entry.no_recent_collections": "No recent collections found",
   "entry.no_entries_yet": "No entries yet",
-  "entry.todays": "Today's",
   "entry.add_your_first": "Add your first",
   "entry.options": "Entry Options",
   "entry.edit_entry": "Edit Entry",
@@ -147,9 +146,10 @@
   "entry.sale": "Sale",
   "entry.farmer": "Farmer",
   "entry.buyer": "Buyer",
+  "entry.milk_buy": "Milk Buy",
+  "entry.milk_sale": "Milk Sale",
 
   "users.create_new_user": "Create New User",
-  "users.full_name": "Full Name",
   "users.select_role": "Select Role",
   "users.user_id": "User ID",
   "users.verified": "Verified",
@@ -159,16 +159,15 @@
   "users.address": "Address",
   "users.member_since": "Member Since",
   "users.dairy_name": "Dairy Name",
-  "users.save_changes": "Save Changes",
   "users.edit_profile": "Edit Profile",
 
   "settings.preferences": "Preferences",
   "settings.account": "Account",
-  "settings.sign_out": "Sign Out",
   "settings.delete_account": "Delete Account",
   "settings.about": "About",
   "settings.version": "Version",
   "settings.built_by": "Built by Subham.",
+  "settings.manage_your_preferences": "Manage your preferences",
 
   "pdf.comprehensive_report": "Comprehensive Milk Collection Report",
   "pdf.total_entries": "Total Entries",
@@ -190,18 +189,18 @@
   "pdf.computer_generated": "This is a computer-generated report and does not require a signature.",
   "pdf.report_generated_on": "Report generated from Sita Dairy Management System",
 
-  "validation.all_fields_required": "Please fill in all fields",
-  "validation.mobile": "Please enter a valid 10-digit phone number",
-  "validation.mobile_indian": "Please enter a valid Indian mobile number",
-  "validation.mobile_range": "Mobile number must start with 6, 7, 8, or 9",
-  "validation.name": "Name should contain only letters and spaces",
-  "validation.amount": "Please enter a valid amount",
-  "validation.role": "Please Choose role",
-  "validation.user": "Please Choose User",
-  "validation.date": "Please Choose Date",
+  "validation.all_fields_required": "Please fill in all fields.",
+  "validation.mobile": "Please enter a valid 10-digit phone number.",
+  "validation.mobile_indian": "Please enter a valid Indian mobile number.",
+  "validation.mobile_range": "Mobile number must start with 6, 7, 8, or 9.",
+  "validation.name": "Name should contain only letters and spaces.",
+  "validation.amount": "Please enter a valid amount.",
+  "validation.role": "Please select a role.",
+  "validation.user": "Please select a user.",
+  "validation.date": "Please select a date.",
 
-  "err.create_account": "Failed to create account",
-  "err.login_fail": "Failed to login",
+  "err.create_account": "Could not create account. Please try again.",
+  "err.login_fail": "Failed to log in.",
 
   "admin.role_assignment": "Role Assignment"
 }
