--- a/i18n/locales/hi-IN/translations.json
+++ b/i18n/locales/hi-IN/translations.json
@@ -1,177 +1,206 @@
 {
   "common.welcome": "स्वागत है",
-  "common.login": "लॉगिन",
-  "common.logout": "लॉगआउट",
-  "common.sign_up": "साइन अप",
-  "common.sign_in": "साइन इन",
-  "common.sign_out": "साइन आउट",
   "common.mobile_number": "मोबाइल नंबर",
   "common.password": "पासवर्ड",
   "common.full_name": "पूरा नाम",
   "common.view_all": "सभी देखें",
-  "common.no_data_found": "कोई डेटा नहीं मिला",
+  "common.no_results_found": "कोई परिणाम नहीं मिला",
   "common.amount": "राशि",
-  "common.paid": "भुगतान किया",
-  "common.received": "प्राप्त किया",
-  "common.menu": "मेन्यू",
+  "common.paid": "भुगतान किया गया",
+  "common.received": "प्राप्त किया गया",
+  "common.menu": "मेनू",
   "common.settings": "सेटिंग्स",
-  "common.app_version": "ऐप वर्ज़न",
+  "common.app_version": "एप्लिकेशन संस्करण",
   "common.profile": "प्रोफाइल",
-  "common.screen_not_exist": "यह स्क्रीन मौजूद नहीं है।",
-  "common.go_home": "होम स्क्रीन पर जाएं",
+  "common.screen_not_exist": "स्क्रीन मौजूद नहीं है।",
+  "common.go_home": "होम स्क्रीन पर जाएँ",
   "common.cancel": "रद्द करें",
-  "common.save": "सेव करें",
+  "common.modified": "संशोधित किया गया",
+  "common.role_assignment": "भूमिका असाइनमेंट",
+  "common.transaction": "लेनदेन",
+  "common.featured_products": "प्रमुख उत्पाद",
   "common.edit": "संपादित करें",
-  "common.delete": "हटाएं",
-  "common.retry": "फिर से कोशिश करें",
-  "common.role_assignment": "भूमिका असाइन करें",
-  "common.txn": "लेनदेन",
-  "common.featured": "फ़ीचर्ड",
-  "common.featured_products": "फ़ीचर्ड प्रोडक्ट्स",
-  "common.description": "विवरण",
-  "common.product_title": "प्रोडक्ट का नाम",
-  "common.tap_to_select_product_image": "प्रोडक्ट की इमेज चुनने के लिए टैप करें",
-  "common.coming_soon": "जल्द आ रहा है",
-  "common.great_things_coming": "कुछ शानदार चीजें जल्द ही आने वाली हैं!",
-  "common.ok": "ठीक है",
+  "common.delete": "हटाएँ",
+  "common.save": "सहेजें",
+  "common.save_changes": "परिवर्तनों को सहेजें",
+  "common.update": "अपडेट करें",
+  "common.add": "जोड़ें",
+  "common.saving": "सहेजा जा रहा है…",
+  "common.retry": "पुनः प्रयास करें",
   "common.reset": "रीसेट करें",
+  "common.description": "विवरण",
+  "common.product_title": "उत्पाद शीर्षक",
+  "common.tap_to_select_product_image": "उत्पाद छवि चुनने के लिए टैप करें",
+  "common.coming_soon": "जल्द आ रहा है",
+  "common.great_things_coming": "शानदार चीज़ें जल्द आ रही हैं!",
+  "common.search": "खोजें",
+  "common.submit": "सबमिट करें",
+  "common.loading": "लोड हो रहा है…",
+  "common.error": "कुछ गलत हो गया",
+  "common.success": "सफलता",
   "common.select_date": "तारीख चुनें",
 
-  "headers.all_users": "सभी यूज़र्स",
-  "headers.filter_by_role": "भूमिका के अनुसार फ़िल्टर करें",
-  "headers.rearrange_users": "यूज़र्स को दोबारा क्रम में लगाएं",
+  "headers.all_users": "सभी उपयोगकर्ता",
+  "headers.filter_by_role": "भूमिका द्वारा फ़िल्टर करें",
+  "headers.rearrange_users": "उपयोगकर्ताओं को पुनर्व्यवस्थित करें",
+  "headers.rate_chart_manager": "रिट चार्ट प्रबंधक",
+  "headers.showing_all_users": "सभी उपयोगकर्ताओं को दिखा रहा है",
+  "headers.filter_by": "द्वारा फ़िल्टर किया गया",
+  "headers.welcome_milk_dashboard": "अपने दूध डैशबोर्ड में स्वागत है",
 
-  "auth.login_account": "अपने अकाउंट में लॉगिन करें",
-  "auth.login_sita_dairy": "सीता डेयरी में लॉगिन करें",
-  "auth.sita_dairy": "सीता डेयरी",
-  "auth.management_system": "मैनेजमेंट सिस्टम",
-  "auth.sita_dairy_management_system": "सीता डेयरी मैनेजमेंट सिस्टम",
-  "auth.create_new_account": "नया अकाउंट बनाएं",
-  "auth.create_account": "अकाउंट बनाएं",
-  "auth.already_have_account": "क्या आपका पहले से अकाउंट है?",
-  "auth.join_our_dairy_community": "हमारी डेयरी कम्युनिटी से जुड़ें",
+  "auth.login": "लॉग इन",
+  "auth.logout": "लॉग आउट",
+  "auth.sign_up": "साइन अप करें",
+  "auth.sign_in": "साइन इन करें",
+  "auth.sign_out": "साइन आउट",
+  "auth.login_account": "खाते में लॉग इन करें",
+  "auth.login_sita_dairy": "सिता डेयरी में लॉग इन करें",
+  "auth.sita_dairy": "सिता डेयरी",
+  "auth.management_system": "प्रबंधन प्रणाली",
+  "auth.sita_dairy_management_system": "सिता डेयरी प्रबंधन प्रणाली",
+  "auth.create_account": "खाता बनाएँ",
+  "auth.already_have_account": "पहले से खाता है?",
+  "auth.join_our_dairy_community": "हमारे डेयरी समुदाय में शामिल हों",
+  "auth.join_sita_dairy": "सिता डेयरी में शामिल हों",
 
   "dashboard.admin_dashboard": "एडमिन डैशबोर्ड",
-  "dashboard.admin_dashboard_tagine": "अपनी डेयरी का संचालन करें",
-  "dashboard.total_users": "कुल यूज़र्स",
-  "dashboard.quick_actions": "फास्ट एक्शन",
-  "dashboard.all_users": "सभी यूज़र्स",
-  "dashboard.milk_entry": "दूध एंट्री",
-  "dashboard.payments": "पेमेंट्स",
+  "dashboard.total_users": "कुल उपयोगकर्ता",
+  "dashboard.today_collection": "आज का संग्रह",
+  "dashboard.monthly_collection": "मासिक संग्रह",
+  "dashboard.quick_actions": "त्वरित क्रियाएं",
+  "dashboard.all_users": "सभी उपयोगकर्ता",
+  "dashboard.milk_entry": "दूध प्रविष्टि",
   "dashboard.reports": "रिपोर्ट्स",
-  "dashboard.recent_entries": "हाल की एंट्रीज़",
-  "dashboard.today_collection": "आज की कलेक्शन",
-  "dashboard.monthly_collection": "महीने की कलेक्शन",
+  "dashboard.recent_entries": "हाल की प्रविष्टियाँ",
+  "dashboard.admin_dashboard_tagline": "अपने डेयरी संचालन का प्रबंधन करें",
 
   "navigation.dashboard": "डैशबोर्ड",
-  "navigation.payments": "पेमेंट्स",
-  "navigation.milk_entry": "दूध एंट्री",
-  "navigation.rate_chart": "रेट चार्ट",
+  "navigation.payments": "भुगतान",
+  "navigation.milk_entry": "दूध प्रविष्टि",
+  "navigation.rate_chart": "दर चार्ट",
+  "navigation.milk_rate": "दूध दर",
   "navigation.all_records": "सभी रिकॉर्ड",
-  "navigation.users": "यूज़र्स",
-  "navigation.rearrange_users": "यूज़र्स को दोबारा क्रम में लगाएं",
-  "navigation.products": "प्रोडक्ट्स",
+  "navigation.milk_records": "दूध रिकॉर्ड",
+  "navigation.users": "उपयोगकर्ता",
+  "navigation.rearrange_users": "उपयोगकर्ताओं को पुनर्व्यवस्थित करें",
+  "navigation.products": "उत्पाद",
   "navigation.profile": "प्रोफाइल",
   "navigation.settings": "सेटिंग्स",
-  "navigation.milk_subscription": "दूध सब्सक्रिप्शन",
+  "navigation.milk_subscription": "दूध सदस्यता",
 
-  "products.buy_on_whatsapp": "व्हाट्सऐप पर खरीदें",
-  "products.no_products_found": "कोई प्रोडक्ट नहीं मिला",
-  "products.loading_products": "प्रोडक्ट लोड हो रहे हैं...",
+  "products.buy_on_whatsapp": "व्हाट्सएप पर खरीदें",
+  "products.no_products_found": "कोई उत्पाद नहीं मिला",
+  "products.loading_products": "उत्पाद लोड हो रहे हैं…",
+  "products.product_management": "उत्पाद प्रबंधन",
 
-  "rate.processing": "प्रोसेस हो रहा है...",
+  "rate.processing": "प्रोसेस हो रहा है…",
   "rate.row": "पंक्ति",
-  "rate.column": "स्तंभ",
+  "rate.column": "कॉलम",
   "rate.excel": "एक्सेल",
-  "rate.fat_and_snf_rate_chart": "फैट और SNF रेट चार्ट",
+  "rate.fat_and_snf_rate_chart": "वसा और SNF दर चार्ट",
 
-  "payments.loading_payments": "लेनदेन लोड हो रहे हैं...",
+  "payments.ok": "ठीक है",
+  "payments.loading_transactions": "लेनदेन लोड हो रहे हैं…",
   "payments.no_transactions_found": "कोई लेनदेन नहीं मिला",
-  "payments.total_money_earned": "कुल कमाई",
+  "payments.total_money_earned": "कुल कमाई राशि",
   "payments.transaction_history": "लेनदेन इतिहास",
-  "payments.select_payment_for": "किसके लिए पेमेंट चुनें",
-  "payments.select_user": "यूज़र चुनें",
-  "payments.enter_amount": "राशि डालें",
+  "payments.select_payment_for": "भुगतान के लिए चुनें",
+  "payments.select_user": "उपयोगकर्ता चुनें",
+  "payments.enter_amount": "राशि दर्ज करें",
   "payments.wallet_points": "वॉलेट पॉइंट्स",
-  "payments.coupons_used": "कूपन इस्तेमाल किए गए",
-  "payments.points_withdrawn": "निकाले गए पॉइंट्स",
+  "payments.coupons_used": "कूपन उपयोग किए गए",
+  "payments.points_withdrawn": "पॉइंट्स निकाले गए",
+  "payments.today_collection": "आज का संग्रह",
   "payments.today_earnings": "आज की कमाई",
-  "payments.monthly_earnings": "महीने की कमाई",
+  "payments.monthly_collection": "मासिक संग्रह",
+  "payments.monthly_earnings": "मासिक कमाई",
 
-  "entry.weight": "वजन",
-  "entry.fat": "फैट",
+  "entry.weight": "वज़न",
+  "entry.fat": "वसा",
   "entry.snf": "एसएनएफ",
-  "entry.entries": "एंट्रीज़",
-  "entry.apply_filters": "फिल्टर लगाएं",
-  "entry.select_date_range": "तारीख की सीमा चुनें",
-  "entry.start_date": "शुरू की तारीख",
-  "entry.end_date": "अंत की तारीख",
+  "entry.entries": "प्रविष्टियाँ",
+  "entry.apply_filters": "फ़िल्टर लागू करें",
+  "entry.start_date": "प्रारंभ तिथि",
+  "entry.end_date": "समाप्त तिथि",
   "entry.clear": "साफ करें",
   "entry.done": "हो गया",
   "entry.select_shift": "शिफ्ट चुनें",
   "entry.morning": "सुबह",
   "entry.evening": "शाम",
   "entry.both": "दोनों",
-  "entry.milk_quality_metrics": "दूध की क्वालिटी माप",
-  "entry.no_recent_collections": "कोई हाल की कलेक्शन नहीं मिली",
-  "entry.no_entries_yet": "अभी कोई एंट्री नहीं है",
-  "entry.todays": "आज की",
-  "entry.add_your_first": "अपनी पहली एंट्री जोड़ें",
-  "entry.options": "एंट्री विकल्प",
-  "entry.edit_entry": "एंट्री संपादित करें",
-  "entry.delete_entry": "एंट्री हटाएं",
-  "entry.editing": "संपादन कर रहे हैं",
+  "entry.milk_quality_metrics": "दूध गुणवत्ता मेट्रिक्स",
+  "entry.no_recent_collections": "हाल ही में कोई संग्रह नहीं मिला",
+  "entry.no_entries_yet": "अभी तक कोई प्रविष्टि नहीं",
+  "entry.add_your_first": "अपनी पहली जोड़ें",
+  "entry.options": "विकल्प",
+  "entry.edit_entry": "प्रविष्टि संपादित करें",
+  "entry.delete_entry": "प्रविष्टि हटाएँ",
+  "entry.editing": "संपादित कर रहे हैं",
   "entry.total": "कुल",
-  "entry.milk_rate": "दूध का रेट",
-  "entry.morning_milk_quality": "सुबह की दूध क्वालिटी",
-  "entry.evening_milk_quality": "शाम की दूध क्वालिटी",
+  "entry.milk_rate": "दूध दर",
+  "entry.morning_milk_quality": "सुबह का दूध गुणवत्ता",
+  "entry.evening_milk_quality": "शाम का दूध गुणवत्ता",
+  "entry.select_farmer": "किसान चुनें",
+  "entry.select_buyer": "खरीदार चुनें",
+  "entry.collection": "संग्रह",
+  "entry.sale": "बिक्री",
+  "entry.farmer": "किसान",
+  "entry.buyer": "खरीदार",
+  "entry.milk_buy": "दूध खरीद",
+  "entry.milk_sale": "दूध बिक्री",
 
-  "users.create_new_user": "नया यूज़र बनाएं",
+  "users.create_new_user": "नया उपयोगकर्ता बनाएँ",
   "users.select_role": "भूमिका चुनें",
-  "users.user_id": "यूज़र आईडी",
-  "users.verified": "वेरिफाइड",
+  "users.user_id": "उपयोगकर्ता आईडी",
+  "users.verified": "सत्यापित",
   "users.personal_info": "व्यक्तिगत जानकारी",
   "users.non_editable": "संपादित नहीं किया जा सकता",
   "users.father_name": "पिता का नाम",
   "users.address": "पता",
-  "users.member_since": "मेंबर कब से",
-  "users.dairy_name": "डेयरी का नाम",
-  "users.save_changes": "बदलाव सेव करें",
+  "users.member_since": "सदस्यता से",
+  "users.dairy_name": "डेयरी नाम",
   "users.edit_profile": "प्रोफाइल संपादित करें",
 
-  "settings.preferences": "पसंद",
-  "settings.account": "अकाउंट",
-  "settings.delete_account": "अकाउंट हटाएं",
-  "settings.about": "जानकारी",
-  "settings.version": "वर्ज़न",
-  "settings.built_by": "TrueLoop Solutions द्वारा बनाया गया",
+  "settings.preferences": "प्राथमिकताएँ",
+  "settings.account": "खाता",
+  "settings.delete_account": "खाता हटाएँ",
+  "settings.about": "के बारे में",
+  "settings.version": "संस्करण",
+  "settings.built_by": "द्वारा बनाया गया: शुभम।",
+  "settings.manage_your_preferences": "अपनी प्राथमिकताओं का प्रबंधन करें",
 
-  "pdf.comprehensive_report": "पूर्ण दूध संग्रह रिपोर्ट",
-  "pdf.total_entries": "कुल एंट्रीज़",
-  "pdf.date_range": "तारीख की सीमा",
+  "pdf.comprehensive_report": "समग्र दूध संग्रह रिपोर्ट",
+  "pdf.total_entries": "कुल प्रविष्टियाँ",
+  "pdf.date_range": "तारीख सीमा",
   "pdf.report_type": "रिपोर्ट प्रकार",
   "pdf.detailed": "विस्तृत",
   "pdf.sno": "क्रम संख्या",
   "pdf.date": "तारीख",
   "pdf.shift": "शिफ्ट",
-  "pdf.weight": "वजन (लीटर)",
-  "pdf.fat": "फैट (%)",
+  "pdf.weight": "वज़न (ली.)",
+  "pdf.fat": "वसा (%)",
   "pdf.snf": "एसएनएफ (%)",
-  "pdf.rate": "रेट (₹/ली)",
+  "pdf.rate": "दर (₹/ली.)",
   "pdf.amount": "राशि (₹)",
   "pdf.total_amount": "कुल राशि (₹)",
   "pdf.summary": "सारांश",
-  "pdf.total_weight": "कुल वजन (लीटर)",
-  "pdf.total_avg_rate": "औसत रेट (₹/ली)",
-  "pdf.computer_generated": "यह रिपोर्ट कंप्यूटर से बनी है, हस्ताक्षर की ज़रूरत नहीं है।",
-  "pdf.report_generated_on": "यह रिपोर्ट सीता डेयरी मैनेजमेंट सिस्टम से बनाई गई है",
+  "pdf.total_weight": "कुल वज़न (ली.)",
+  "pdf.total_avg_rate": "कुल औसत दर (₹/ली.)",
+  "pdf.computer_generated": "यह एक कंप्यूटर जनित रिपोर्ट है और हस्ताक्षर की आवश्यकता नहीं है।",
+  "pdf.report_generated_on": "रिपोर्ट Sita Dairy प्रबंधन प्रणाली से तैयार की गई है",
 
-  "validation.all_fields_required": "कृपया सभी फ़ील्ड भरें",
-  "validation.mobile": "कृपया सही 10 अंकों का मोबाइल नंबर दर्ज करें",
-  "validation.mobile_indian": "कृपया सही भारतीय मोबाइल नंबर दर्ज करें",
-  "validation.mobile_range": "मोबाइल नंबर 6, 7, 8 या 9 से शुरू होना चाहिए",
-  "validation.name": "नाम में केवल अक्षर और स्पेस होने चाहिए",
+  "validation.all_fields_required": "कृपया सभी फ़ील्ड भरें।",
+  "validation.mobile": "कृपया 10-अंकीय मान्य फोन नंबर दर्ज करें।",
+  "validation.mobile_indian": "कृपया एक मान्य भारतीय मोबाइल नंबर दर्ज करें।",
+  "validation.mobile_range": "मोबाइल नंबर 6,7,8 या 9 से शुरू होना चाहिए।",
+  "validation.name": "नाम में केवल अक्षर और स्पेस होने चाहिए।",
+  "validation.amount": "कृपया एक मान्य राशि दर्ज करें।",
+  "validation.role": "कृपया एक भूमिका चुनें।",
+  "validation.user": "कृपया एक उपयोगकर्ता चुनें।",
+  "validation.date": "कृपया एक तारीख चुनें।",
 
-  "err.create_account": "खाता बनाने में विफल",
-  "err.login_fail": "लॉगिन करने में विफल"
+  "err.create_account": "खाता नहीं बनाया जा सका। कृपया पुन: प्रयास करें।",
+  "err.login_fail": "लॉग इन असफल हुआ।",
+
+  "admin.role_assignment": "भूमिका असाइनमेंट"
 }
