added translation of toasts

--- a/i18n/locales/bh-IN/translations.json
+++ b/i18n/locales/bh-IN/translations.json
@@ -39,6 +39,9 @@
   "common.error": "कुछ गलती भइल",
   "common.success": "सफल भइल",
   "common.select_date": "तारीख चुनल जाव",
+  "common.network_error": "नेटवर्क में गलती बा",
+  "common.please_wait": "जरा रुकि जा...",
+  "common.something_wrong_retry": "कुछ गड़बड़ हो गइल। फेर से कोसिस करीं।",
 
   "headers.all_users": "सभ उपयोगकर्ता",
   "headers.filter_by_role": "भूमिका से फ़िल्टर करीं",
@@ -62,6 +65,19 @@
   "auth.already_have_account": "पहिले से खाता बा?",
   "auth.join_our_dairy_community": "हमार डेयरी समुदाय से जुड़ीं",
   "auth.join_sita_dairy": "सिता डेयरी में शामिल होखीं",
+  "auth.signing_in": "लॉगिन होत बा...",
+  "auth.please_wait_login": "कृपया रुकीं, हम तोहरा के लॉगिन करावत बानी।",
+  "auth.login_successful": "लॉगिन सफल भइल!",
+  "auth.welcome_user": "स्वागत बा, {{name}}! 🎉",
+  "auth.login_failed": "लॉगिन फेल भइल",
+  "auth.signing_up": "साइन अप होत बा...",
+  "auth.signup_successful": "साइन अप सफल भइल!",
+  "auth.signup_failed": "साइन अप फेल भइल",
+  "auth.logout_successful": "रउआ सफलतापूर्वक लॉगआउट हो गइनी!",
+  "auth.come_back_soon": "जल्दी वापस आईं!",
+  "auth.email_required": "ईमेल जरूरी बा",
+  "auth.all_fields_required": "सब फील्ड भरल जरूरी बा",
+  "auth.invalid_verification_code": "गलत वेरिफिकेशन कोड बा",
 
   "dashboard.admin_dashboard": "एडमिन डैशबोर्ड",
   "dashboard.total_users": "कुल उपयोगकर्ता",
