--- a/i18n/locales/en-US/translations.json
+++ b/i18n/locales/en-US/translations.json
@@ -39,6 +39,9 @@
   "common.error": "Something went wrong",
   "common.success": "Success",
   "common.select_date": "Select Date",
+  "common.network_error": "Network Error",
+  "common.please_wait": "Please wait...",
+  "common.something_wrong_retry": "Something went wrong. Please try again.",
 
   "headers.all_users": "All Users",
   "headers.filter_by_role": "Filter by Role",
@@ -62,6 +65,19 @@
   "auth.already_have_account": "Already have an account?",
   "auth.join_our_dairy_community": "Join our dairy community",
   "auth.join_sita_dairy": "Join Sita Dairy",
+  "auth.signing_in": "Signing In...",
+  "auth.please_wait_login": "Please wait while we log you in.",
+  "auth.login_successful": "Login Successful!",
+  "auth.welcome_user": "Welcome, {{name}}! 🎉",
+  "auth.login_failed": "Login Failed",
+  "auth.signing_up": "Signing Up...",
+  "auth.signup_successful": "Sign up Successful!",
+  "auth.signup_failed": "Signup Failed",
+  "auth.logout_successful": "Logged out successfully!",
+  "auth.come_back_soon": "Come back soon!",
+  "auth.email_required": "Email is required",
+  "auth.all_fields_required": "All fields are required",
+  "auth.invalid_verification_code": "Invalid verification code",
 
   "dashboard.admin_dashboard": "Admin Dashboard",
   "dashboard.total_users": "Total Users",
