--- a/i18n/locales/hi-IN/translations.json
+++ b/i18n/locales/hi-IN/translations.json
@@ -39,6 +39,9 @@
   "common.error": "कुछ गलत हो गया",
   "common.success": "सफलता",
   "common.select_date": "तारीख चुनें",
+  "common.network_error": "नेटवर्क त्रुटि",
+  "common.please_wait": "कृपया प्रतीक्षा करें...",
+  "common.something_wrong_retry": "कुछ गलत हो गया। कृपया पुनः प्रयास करें।",
 
   "headers.all_users": "सभी उपयोगकर्ता",
   "headers.filter_by_role": "भूमिका द्वारा फ़िल्टर करें",
@@ -62,6 +65,19 @@
   "auth.already_have_account": "पहले से खाता है?",
   "auth.join_our_dairy_community": "हमारे डेयरी समुदाय में शामिल हों",
   "auth.join_sita_dairy": "सिता डेयरी में शामिल हों",
+  "auth.signing_in": "साइन इन हो रहा है...",
+  "auth.please_wait_login": "कृपया प्रतीक्षा करें, हम आपको लॉग इन कर रहे हैं।",
+  "auth.login_successful": "लॉगिन सफल!",
+  "auth.welcome_user": "स्वागत है, {{name}}! 🎉",
+  "auth.login_failed": "लॉगिन असफल",
+  "auth.signing_up": "साइन अप हो रहा है...",
+  "auth.signup_successful": "साइन अप सफल!",
+  "auth.signup_failed": "साइन अप असफल",
+  "auth.logout_successful": "आप सफलतापूर्वक लॉगआउट हो गए!",
+  "auth.come_back_soon": "जल्द ही वापस आएं!",
+  "auth.email_required": "ईमेल आवश्यक है",
+  "auth.all_fields_required": "सभी फ़ील्ड आवश्यक हैं",
+  "auth.invalid_verification_code": "अमान्य सत्यापन कोड",
 
   "dashboard.admin_dashboard": "एडमिन डैशबोर्ड",
   "dashboard.total_users": "कुल उपयोगकर्ता",
